Fix boxid alignment in header in RTL

--- a/ideascube/static/ideascube/main.css
+++ b/ideascube/static/ideascube/main.css
@@ -460,7 +460,7 @@ header h1 a {
 }
 html[dir='rtl'] .boxid {
     float: left;
-    right: -31px;
+    right: -81px;
 }
 footer .half {
     margin-left: 50%;
